<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="theme"
        android:title="@string/pref_theme_title"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="system"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="request_timeout_seconds"
        android:title="@string/pref_timeout_title"
        android:defaultValue="15"
        android:inputType="number"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="user_agent"
        android:title="@string/pref_user_agent_title"
        android:defaultValue="WebReconToolkit/1.0"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:key="hibp_enabled"
        android:title="@string/pref_hibp_title"
        android:defaultValue="true" />

    <ListPreference
        android:key="recon_intensity"
        android:title="@string/pref_recon_intensity_title"
        android:entries="@array/intensity_entries"
        android:entryValues="@array/intensity_values"
        android:defaultValue="medium"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
